<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.moodCheckIn.CheckInColorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="10dp"
        android:weightSum="5"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp">


            <LinearLayout
                android:id="@+id/btn_awful"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/iv_awful"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/awful"
                    app:srcCompat="@drawable/ic_circle_red" />


                <TextView
                    android:id="@+id/tv_awful"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/awful"
                    android:visibility="invisible"
                    android:textColor="@color/rate_color_awful"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:gravity="center"/>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/btn_bad"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_bad"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/bad"
                    app:srcCompat="@drawable/ic_circle_orange" />

                <TextView
                    android:id="@+id/tv_bad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bad"
                    android:visibility="invisible"
                    android:textColor="@color/rate_color_bad"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:gravity="center"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_okay"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="4dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_okay"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/good"
                    app:srcCompat="@drawable/ic_circle_yellow" />

                <TextView
                    android:id="@+id/tv_okay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/okay"
                    android:visibility="invisible"
                    android:textColor="@color/rate_color_okay"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_good"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/iv_good"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/good"
                    app:srcCompat="@drawable/ic_circle_green" />

                <TextView
                    android:id="@+id/tv_good"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/good"
                    android:textColor="@color/rate_color_good_"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:visibility="invisible" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_great"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_great"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/great"
                    app:srcCompat="@drawable/ic_circle_dark_green" />

                <TextView
                    android:id="@+id/tv_great"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/great"
                    android:visibility="invisible"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/rate_color_great"
                    android:gravity="center"/>



            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="580dp"
        android:background="@color/color_primary"
        android:elevation="4dp"
        android:text="Submit" />




</merge>