<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F4F4F4F4"
    tools:context=".fragments.moodCheckIn.MoodCheckInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </View>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/topbar"
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mood Check-In"
                        android:textColor="@color/white"
                        android:textSize="30sp"></TextView>
                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/rating_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/card"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">
                    <!--android:onClick="goToJokesScreen"-->

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/scale"
                        android:src="@drawable/ic_scale">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/scale"
                        android:textAlignment="center"
                        android:textSize="18sp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/emoji_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/card"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/emoji"
                        android:src="@drawable/ic_baseline_emoji_emotions_24">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/emoji"
                        android:textAlignment="center"
                        android:textSize="18sp"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/color_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/card"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/color"
                        android:src="@drawable/ic_color">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/color"
                        android:textAlignment="center"
                        android:textSize="18sp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/camera_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/card"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/emotionRecognition"
                        android:src="@drawable/ic_camera">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/emotionRecognition"
                        android:textAlignment="center"
                        android:textSize="18sp"></TextView>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
